--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,16 @@ button:active {
   color: #000;
 }
 
+@keyframes fade {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+.fade {
+  animation: fade 1s ease-in-out;
+}
+
+
 @media (max-width: 600px) {
   .button-row {
     flex-direction: column;
